# go2_ros2_sdk

coco_detector/coco_detector/: coco_detector_node.py
coverage_client/: package.xml  setup.cfg  setup.py
coverage_client/coverage_client/: coverage.py  object_localization.py  robot_navigator.py
go2_robot_sdk/: package.xml
go2_robot_sdk/config/: coverage.yaml  mapper_params_online_async.yaml  nav2_params.yaml  navigate_through_poses_w_replanning_and_recovery.xml  single_robot_conf.rviz
go2_robot_sdk/launch/: robot.launch.py
