<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>coverage_client</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="guanhuaji@g.ucla.edu">nesl</maintainer>
  <license>Apache-2.0</license>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>opennav_coverage_msgs</depend>
  <depend>opennav_coverage</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
